--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -5,3 +5,87 @@ dark-blue: #0a2c42;
 grey: #bfbfbf;
 font-family: Arial, Helvetica, sans-serif;
 */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    position: relative;
+    font-family: sans-serif;
+}
+
+nav {
+    background-color: #2081c3;
+    height: 5rem;
+    width: 100%;
+}
+
+nav a {
+    color: #f7f9f9;
+    text-decoration: none;
+
+}
+
+nav ul {
+    display: flex;
+    justify-content: flex-start;
+    list-style-type: none;
+    padding: 2rem;
+}
+
+nav li {
+    margin-left: 2rem;
+}
+
+footer {
+    background-color: #0a2c42;
+    color: #f7f9f9;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 3rem;
+}
+
+footer p {
+    margin: 1rem;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.beer-container {
+    width: 400px;
+    height: 400px;
+}
+
+.beer-container img {
+    height: 200px;
+}
+
+.beer-container h3 {
+    font-size: 1.5rem;
+    font-weight: 900;
+}
+
+#logo {
+    max-height: 400px;
+    margin: 2rem;
+}
+
+.btn-link {
+    color: #f7f9f9;
+    text-decoration: none;
+    background-color: #2081c3;
+    padding: 1rem 2rem;
+    margin: 1rem;
+    border-radius: 5px;
+    font-weight: 500;
+}
