--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,5 @@
-<div>
-
+<div class="column">
+    <img id='logo' src="/images/beer.png" alt="Beer!">
+    <a href="/beers" class="btn-link">Check the Beers!</a>
+    <a href="/random-beer" class="btn-link">Check a Random Beer!</a>
 </div>
