--- a/views/beers.hbs
+++ b/views/beers.hbs
@@ -1,5 +1,7 @@
-{{#each beers}}
-    <div class="beer-container">
-        {{>beerpartial this}}
-    </div>
-{{/each}}
+<div id="beers">
+    {{#each beers}}
+        <div class="beer-container">
+            {{>beerpartial this}}
+        </div>
+    {{/each}}
+</div>
