--- a/views/random-beer.hbs
+++ b/views/random-beer.hbs
@@ -1,11 +1,6 @@
-<div>
-    {{>beerpartial beer}}
-    <ul>
-        {{#each beer.food_pairing}}
-            <li>{{this}}</li>
-        {{/each}}
-    </ul>
-    <p>
-        {{beer.brewers_tips}}
-    </p>
+<div id="beer">
+
+    <div class="beer-container">
+        {{>beerminordetailspartial beer}}
+    </div>
 </div>
