--- a/views/partials/beerpartial.hbs
+++ b/views/partials/beerpartial.hbs
@@ -1,9 +1,8 @@
 {{# if image_url}}
-    <img src="{{image_url}}" alt="Picture of {{name}}">
-{{else}}
-    [No Picture available]
+    <img class='beer-img' src="{{image_url}}" alt="Picture of {{name}}">
 {{/if}}
-<p><a href="/beers/beer-{{id}}">{{name}}</a></p>
-<p>{{description}}</p>
-<p>{{tagline}}</p>
+
+<h3 class="beer-name"><a href="/beers/beer-{{id}}">{{name}}</a></h3>
+<p class="beer-tagline">{{tagline}}</p>
+<p class="beer-description">{{description}}</p>
 
