--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -95,7 +95,6 @@ footer p {
 #beers > .beer-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding: 2rem;
 }
 
@@ -121,6 +120,7 @@ footer p {
 
 #beers .beer-container img {
     margin-bottom: 0.5rem;
+    align-self: center;
 }
 
 #beers .beer-name {
