--- a/views/partials/beerminordetailspartial.hbs
+++ b/views/partials/beerminordetailspartial.hbs
@@ -1,6 +1,6 @@
 {{>beerpartial this}}
 
-<div class="beer-food-pairings">
+<div class="beer-detail">
     <h4>Food Pairing</h4>
     <ul>
     {{#each food_pairing}}
@@ -10,7 +10,7 @@
 </div>
 
 
-<p class="beer-brewers-tips">
+<p class="beer-detail">
     <strong>Brewers Tips: </strong>
     {{brewers_tips}}
 </p>
